# yare

./: .gitignore  .gitmodules  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
docs/: api.md  architecture.md  build.md  testing.md  third_party.md
gradle/: libs.versions.toml
sample/: build.gradle.kts
sample/src/main/: AndroidManifest.xml
sample/src/main/cpp/: CMakeLists.txt  examples.cpp
sample/src/main/java/com/laole918/yare/sample/: MainActivity.java  SampleApp.java
sample/src/main/java/com/laole918/yare/sample/test/: AccessHiddenApiTest.java  Arg0Test.java  Arg4444Test.java  Arg4448Test.java  Arg444Test.java  Arg4484Test.java  Arg4488Test.java  Arg448Test.java  Arg44Test.java  Arg4844Test.java  Arg4848Test.java  Arg484Test.java  Arg4884Test.java  Arg4888Test.java  Arg488Test.java  Arg48Test.java  Arg4Test.java  Arg8444Test.java  Arg8448Test.java  Arg844Test.java  Arg8484Test.java  Arg8488Test.java  Arg848Test.java  Arg84Test.java  Arg8844Test.java  Arg8848Test.java  Arg884Test.java  Arg8884Test.java  Arg8888Test.java  Arg888Test.java  Arg88Test.java  Arg8Test.java  ArgLLLILLZZZIIILTest.java  ConstructorTest.java  DelayHookTest.java  DirectMethodTest.java  DirectRegisterJNITest.java  DynamicLookupJNITest.java  GCTest.java  InvokeOriginalMethodTest.java  (+11 more)
sample/src/main/java/com/laole918/yare/sample/utils/: ReflectionHelper.java
sample/src/main/res/layout/: activity_main.xml  test_item.xml
sample/src/main/res/values/: strings.xml
yare/: build.gradle.kts  proguard-rules.pro
yare/src/main/java/com/laole918/yare/: Yare.java  YareConfig.java
yare/src/main/java/com/laole918/yare/callback/: MethodHook.java  MethodReplacement.java
yare/src/main/jni/: CMakeLists.txt  elf_image.cpp  elf_image.h  hidden_api.cpp  hidden_api.h  io_wrapper.h  log.h  macros.h  profile_saver.cpp  profile_saver.h  yare.cpp
